// Copyright Â© 2017 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package stratumn.alice.app.raft.pb;

option go_package = "github.com/stratumn/alice/app/raft/pb;pb";

message Empty {
}

message Peer {
  uint64 id = 1;
  bytes address = 2;
}

message PeerID {
  bytes address = 1;
}

message StatusInfo {
  bool running = 1;
  uint64 id = 2;
}

message Proposal {
  bytes data = 1;
}

message Entry {
  uint64 index = 1;
  bytes data = 2;
}

message Peers {
    repeated Peer peers = 1;
}

message Internode {
    PeerID peer_id = 1;
    bytes message = 2;
}
